// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be rendered correctly 1`] = `
<label
  className="container uui-checkbox-container root size-18 theme-light mode-form color-sky -clickable"
  tabIndex={-1}
>
  <div
    className="uui-checkbox uui-checked"
  >
    <input
      checked={true}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</label>
`;

exports[`Checkbox should be rendered correctly with new props 1`] = `
<label
  className="container uui-checkbox-container root size-12 theme-dark mode-form color-sun -clickable"
  tabIndex={-1}
>
  <div
    className="uui-checkbox uui-checked"
  >
    <input
      checked={true}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</label>
`;
